# Lalafo-clone-fastapi

./: .gitignore  alembic.ini  main.py  pyproject.toml
core/: config.py
core/database/: db_helper.py
core/database/alembic/: env.py
core/database/alembic/versions/: 2023_10_15_1451-327ba3e87d01_init.py  2023_10_15_1809-c144744e659c_user_model.py  2023_10_17_2110-a4c275968bed_product_model.py  2023_10_19_0052-f1a580b1c1f4_category_model.py  2023_10_19_0058-ff0a9aac8e68_category_model.py  2023_10_19_0103-92e1e1684103_category_model.py  2023_10_19_2030-ffddc5052092_remigrate.py  2023_10_21_0129-94f096e47860_remigrate.py  2023_10_23_1320-58ef9d675da4_product_currency.py  2023_10_27_2034-b7874acc3f03_product_currency.py  2023_10_27_2043-74a4a5214cfe_product_currency.py
core/database/models/: __init__.py  base.py  product.py  user.py
products/: crud.py  dependencies.py  schemas.py  views.py
users/: schemas.py
