[tool.poetry]
name = "lalafoclone"
version = "0.1.0"
description = ""
authors = ["DotVR46 <maggot8950@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
black = "^23.9.1"
aiosqlite = "^0.19.0"
pydantic-settings = "^2.0.3"
alembic = "^1.12.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.21"}
pydantic = {extras = ["email"], version = "^2.4.2"}
email-validator = "^2.0.0.post2"
asyncpg = "^0.28.0"
inflect = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
